--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,10 +8,9 @@
 </div>
 
 <div class="messages">
-  {{#if messages}}
-    <p class="error_msg">{{messages.error}}</p>
-    <p class="info_msg">{{messages.info}}</p>
-  {{/if}}
+  {{#each messages}}
+    <p class="info_msg">{{this}}</p>
+  {{/each}}
 </div>
 
 <div class="tasklist">
