--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,9 +8,10 @@
 </div>
 
 <div class="messages">
-  {{#each messages}}
-    <p class="info_msg">{{this}}</p>
-  {{/each}}
+  {{#if messages}}
+    <p class="error_msg">{{messages.error}}</p>
+    <p class="info_msg">{{messages.info}}</p>
+  {{/if}}
 </div>
 
 <div class="tasklist">
